add test timer code

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ PROJECT = stm32test
 
 CHOPSTX = ../chopstx
 
-CSRC = main.c crc32.c \
+CSRC = main.c crc32.c timer.c \
 	usb_desc.c usb_ctrl.c \
 	usb-thread.c
 
