rip out bits of usart that I don't care about, and add to build

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,8 @@ CHOPSTX = ../chopstx
 
 CSRC = main.c crc32.c timer.c \
 	usb_desc.c usb_ctrl.c \
-	usb-thread.c exti.c
+	usb-thread.c exti.c \
+	usart-stm32f103.c
 
 INCDIR =
 
